--- a/admin/src/app/home/home.component.html
+++ b/admin/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="wrapper">
+    <app-vertical-navbar></app-vertical-navbar>
+    <router-outlet></router-outlet>
+</div>
