--- a/admin/src/app/login/login.component.css
+++ b/admin/src/app/login/login.component.css
@@ -1,15 +1,15 @@
 .wrapper{
     height: 100svh;
     width:100svw;
-    background-color: #fff;
+    background-color: #F8F9FA;
     display: grid;
     place-items: center;
 }
 
 .login-container{
     width: 400px;
-    height: 350px;
-    background-color: #fafafa;
+    /*minheight: 350px;*/
+    background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
     position: relative;
@@ -29,13 +29,12 @@
 
 .image mat-icon{
     font-size: 3rem;
-    color: #fafafa;
+    color: #fff;
     height: 100%;
     width: 100%;
     display: grid;
     place-items: center;
-    background: rgb(255,223,64);
-    background: linear-gradient(90deg, rgba(255,223,64,1) 14%, rgba(255,131,89,1) 86%);
+    background: #4FD1C5;
     border-radius: 100svh;
 }
 
@@ -53,11 +52,12 @@
     font-size: 2rem;
     font-weight: 600;
     text-transform: uppercase;
+    color: #2D3748;
 }
 .header p{
     font-weight: 500;
     text-transform: lowercase;
-    color: #050505;
+    color: #2D3748;
     font-size: 1rem;
 }
 
@@ -85,12 +85,14 @@
     border-radius: 100svh;
     justify-content: space-between;
     padding:10px 7px;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
 }
 
 .search-group {
     display: flex;
     align-items: center;
-    padding-left: 0.6rem;
+    padding-inline: 0.6rem;
+    width: 100%;
 }
 
 .search span{
@@ -102,25 +104,32 @@
     border: none;
     outline: none;
     background-color: transparent;
-    color: rgba(82, 82, 82, 0.7);
+    color: #A0AEC0;
     font-size: 0.9rem;
     font-weight: 500;
     margin-left: 0.4rem;
+    width: 100%;
 }
 
 .search-group input::placeholder {
-    color: rgba(82, 82, 82, 0.7);
+    color:#A0AEC0;
+}
+
+.search-group mat-icon{
+    color:#2D3748;
 }
 
 .eye{
     cursor: pointer;
+    color:#2D3748;
 }
 
 small{
-    color:red;
+    color:#E53E3E;
     font-size:0.8rem;
     margin-left:25px;
-    text-align: left
+    text-align: left;
+    font-weight: 600;
 }
 
 .forgetPwd{
@@ -134,7 +143,7 @@ small{
 
 .forgetPwd span, .signUp a{
     text-decoration: none;
-    color:#ff7514;
+    color:#4FD1C5;
     font-weight: 600;
     font-size: 0.9rem;
     letter-spacing: 0.5px;
@@ -155,9 +164,10 @@ small{
     border: none;
     border-radius: 100svh;
     cursor: pointer;
-    background: rgb(255,223,64);
-    background: linear-gradient(90deg, rgba(255,223,64,1) 14%, rgba(255,131,89,1) 86%);
-    color: #fafafa;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
+    background: #313860;
+    background: linear-gradient(60deg, #313860 14%, #151928 86%);
+    color: #fff;
     font-weight: 600;
     text-transform: capitalize;
     width:90%;
@@ -166,6 +176,7 @@ small{
     font-weight: 600;
     display: grid;
     place-items: center;
+    margin-bottom: 1.5rem;
 }
 
 .row-line{
