--- a/admin/src/app/home/main/main.component.css
+++ b/admin/src/app/home/main/main.component.css
@@ -6,3 +6,21 @@
     height: 100svh;
     background-color: #EDF2F7;
 }
+.container{
+    width:90%;
+    height: 90%;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+}
+.container-map{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+
+}
+.mapContainer{
+    width: 300px;
+    height: 300px;
+}
