--- a/admin/src/app/home/main/main.component.html
+++ b/admin/src/app/home/main/main.component.html
@@ -1,3 +1,19 @@
 <div class="wrapper">
-    pckoo
+    <div class="container">
+        <div class="container-map">
+            <div id="mapContainer" class="mapContainer">
+            </div>
+        </div>
+        <div class="container-filter">
+            <select name="" id="">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </div>
+    </div>
+    
+    
 </div>
