--- a/admin/src/app/home/main/main.component.html
+++ b/admin/src/app/home/main/main.component.html
@@ -1,17 +1,38 @@
 <div class="wrapper">
     <div class="container">
         <div class="container-map">
+            <div class="text">
+                <span>
+                    <mat-icon>location_on</mat-icon>
+                    <span>Mappa</span>
+                </span>
+            </div>
             <div id="mapContainer" class="mapContainer">
             </div>
         </div>
         <div class="container-filter">
-            <select name="" id="">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select>
+            <div class="text">
+                <span>
+                    <mat-icon>filter_alt</mat-icon>
+                    <span>Filtri</span>
+                </span>
+            </div>
+            <div class="select-parent" (click)="openMenu()">
+               <span>{{filter}}</span>
+               <mat-icon [ngClass]="{rotate: isOpen}">arrow_drop_down</mat-icon>
+            </div>
+            @if(isOpen){
+                <div class="option-parent">
+                    @if(filter != 'tutti'){
+                        <div (click)="changeFilter('tutti')">tutti</div>
+                    }
+                    @for (perizia of this.perizieService.perizie; track perizia._id) {
+                        @if(filter != perizia.codiceOp){
+                            <div (click)="changeFilter(perizia.codiceOp)" >{{ perizia.codiceOp }}</div>
+                        }
+                    }
+                </div>
+            }
         </div>
     </div>
     
