Add the total amount of appraisals and start to do infowindows

--- a/admin/src/app/home/main/main.component.html
+++ b/admin/src/app/home/main/main.component.html
@@ -34,6 +34,17 @@
                 </div>
             }
         </div>
+        <div class="container-tot">
+            <div class="text">
+                <span>
+                    <mat-icon>functions</mat-icon>
+                    <span>Totale perizie</span>
+                </span>
+            </div>
+            <div class="tot-parent">
+                <span>{{this.perizieService.totPerizie}}</span>
+            </div>
+        </div>
     </div>
     
     
