--- a/admin/src/app/home/main/main.component.css
+++ b/admin/src/app/home/main/main.component.css
@@ -11,12 +11,13 @@
     height: 90%;
     display: grid;
     grid-template-columns: 4fr 1fr;
+    grid-template-rows: 1fr 1fr;
     padding: 2rem;
-    gap: 3rem;
+    gap: 2rem;
 }
 .container-map{
     width: 100%;
-    height: 100%;
+    grid-row: span 2;
     display: flex;
     flex-direction: column;
     background-color: #fff;
@@ -62,6 +63,11 @@
     background-color: #4FD1C5;
 }
 
+.container-tot .text span mat-icon{
+    background-color: #fff;
+    color:#4FD1C5;
+}
+
 .text span span{
     width: 100%;
     font-size:1rem;
@@ -69,7 +75,12 @@
     font-weight: bold;
 }
 
-.container-filter{
+.container-tot .text span span{
+    color:#fff;
+
+}
+
+.container-filter, .container-tot{
     width: 100%;
     height: 100%;
     display: flex;
@@ -77,6 +88,11 @@
     background-color: #fff;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
     border-radius: 10px;
+}
+.container-tot{
+    background-image: url("../../../assets/bg.svg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container-filter .select-parent{
@@ -107,7 +123,7 @@
 .option-parent{
     width:95%;
     margin: 0.1rem auto;
-    max-height: 300px;
+    height: 150px;
     overflow-y: auto;
     overflow-x: hidden;
     background-color: #fff;
@@ -134,5 +150,25 @@
 .rotate{
     transform: rotate(180deg);
     transition: all 0.3s ease-in-out;
+}
+
+.container-tot .tot-parent{
+    width: 90%;
+    height: 100%;
+    margin: 3rem auto;
+    padding: 0.6em;
+    border-radius: 10px;
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.tot-parent span{
+    font-size: 8rem;
+    font-weight: bold;
 }
 
