--- a/admin/src/app/home/main/main.component.css
+++ b/admin/src/app/home/main/main.component.css
@@ -80,7 +80,7 @@
 
 }
 
-.container-filter, .container-tot{
+.container-filter, .container-tot, .container-path{
     width: 100%;
     height: 100%;
     display: flex;
@@ -109,6 +109,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    opacity: 1;
     
 }
 
@@ -171,4 +172,47 @@
     font-size: 8rem;
     font-weight: bold;
 }
+
+.path-parent{
+    width: 90%;
+    border-radius: 10px;
+    font-size: 1rem;
+    color: #A0AEC0;
+    font-weight: 500;
+    margin: 0.5rem auto;
+    text-align: left;
+}
+
+.path-parent span{
+    color: #2D3748;
+    font-weight: bold;
+}
+
+.button-parent{
+    width: 90%;
+    margin: 1rem auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 100%;
+}
+
+.button-parent button{
+    width: 100%;
+    padding: 0.6em;
+    border-radius: 10px;
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: bold;
+    background: #313860;
+    background: linear-gradient(60deg, #313860 14%, #151928 86%);
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border: none;
+}
+
+
 
