Add the logout method

--- a/admin/src/app/home/main/main.component.html
+++ b/admin/src/app/home/main/main.component.html
@@ -50,12 +50,10 @@
                     <div>Durata :<span>{{this.perizieService.time}}</span></div>
                 </div>
                 <div class="button-parent">
-                    <button (click)="showPath()">Chiudi percorso</button>
+                    <button (click)="showFilters()">Chiudi percorso</button>
                 </div>
             </div>
         }
-        
-
         <div class="container-tot">
             <div class="text">
                 <span>
