--- a/admin/src/app/home/vertical-navbar/vertical-navbar.component.html
+++ b/admin/src/app/home/vertical-navbar/vertical-navbar.component.html
@@ -17,10 +17,10 @@
             </span>
         </li>
     </ul>
-    <div class="log-out">
+    <div class="log-out" (click)="logOut()">
         <span>
             <mat-icon>logout</mat-icon>
-            <a class="navbar-link" routerLink="/home" routerLinkActive="active">Log Out</a>
+            <a class="navbar-link" >Log Out</a>
         </span>
     </div>
 </div>
