The edit component works correctly and start doing the gallery one

--- a/admin/src/app/home/home.component.css
+++ b/admin/src/app/home/home.component.css
@@ -9,3 +9,12 @@ app-vertical-navbar{
     left: 0;
     bottom:0;
 }
+
+app-edit-perizia{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+}
