--- a/admin/src/app/home/home.component.html
+++ b/admin/src/app/home/home.component.html
@@ -1,4 +1,10 @@
 <div class="wrapper">
     <app-vertical-navbar></app-vertical-navbar>
     <router-outlet></router-outlet>
+    @if(this.periziaService.isShowEdit){
+        <app-edit-perizia></app-edit-perizia>
+    }
+    @if(this.periziaService.isShowGallery){
+        <app-gallery></app-gallery>
+    }
 </div>
