--- a/admin/src/app/home/vertical-navbar/vertical-navbar.component.html
+++ b/admin/src/app/home/vertical-navbar/vertical-navbar.component.html
@@ -13,7 +13,7 @@
         <li class="navbar-item" [ngClass]="{active: active == 'users'}" (click)="getClass('users')">
             <span>
                 <mat-icon>person</mat-icon>
-                <a class="navbar-link" routerLink="/users" >Utenti</a>
+                <a class="navbar-link" routerLink="/home/users">Utenti</a>
             </span>
         </li>
     </ul>
