--- a/admin/src/app/login/login.component.css
+++ b/admin/src/app/login/login.component.css
@@ -104,7 +104,7 @@
     border: none;
     outline: none;
     background-color: transparent;
-    color: #A0AEC0;
+    color: #2D3748;
     font-size: 0.9rem;
     font-weight: 500;
     margin-left: 0.4rem;
