--- a/admin/src/app/home/users/users.component.css
+++ b/admin/src/app/home/users/users.component.css
@@ -10,8 +10,255 @@
     width:95%;
     height: 90%;
     display: grid;
-    grid-template-columns: 4fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 4fr;
     padding: 2rem;
     gap: 2rem;
+}
+
+.add-user{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-image: url("../../../assets/bg.svg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position:right 35% bottom 45%;;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
+    border-radius: 10px;
+}
+
+.text{
+    width: 98%;
+}
+.add-user-container{
+    width:98%;
+    height: 98%;
+    border-radius: 10px;
+    margin: 0.2rem auto;
+    margin-bottom: 0.6rem;
+    display: flex;
+    align-items: center;
+
+}
+
+.text{
+    display: flex;
+    width: 100%;
+    margin-left: 0.5rem;
+}
+
+.text > span{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    margin:0.5rem 0;
+}
+
+.text span mat-icon{
+    font-size: 2rem;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-radius:15px;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
+    color:#fff;
+    background-color: #4FD1C5;
+}
+
+.add-user .text span mat-icon{
+    font-size: 2rem;
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-radius:15px;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
+    background-color:#fff;
+    color: #4FD1C5;
+}
+
+/*.container-tot .text span mat-icon{
+    background-color: #fff;
+    color:#4FD1C5;
+}*/
+
+.text span span{
+    width: 100%;
+    font-size:1rem;
+    color:#2D3748;
+    font-weight: bold;
+}
+
+.add-user .text span span{
+    width: 100%;
+    font-size:1rem;
+    color:#fff;
+    font-weight: bold;
+}
+
+.button-parent{
+    width: 100px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    height: 100%;
+}
+
+.button-parent button{
+    width: 100%;
+    padding: 0.6em;
+    border-radius: 10px;
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #fff;
+    font-size: 1rem;
+    color: #2D3748;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border: none;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
+}
+
+
+.list-user{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
+    border-radius: 10px;
+}
+
+.list-user-container{
+    width:98%;
+    height: 98%;
+    border-radius: 10px;
+    margin: 0.2rem auto;
+    margin-bottom: 0.6rem;
+    display: flex;
+    align-items: flex-start;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
+}
+
+.table{
+    width: 100%;
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+    padding: 0.5rem;
+    gap: 0.5rem;
+    /*outline: 1px solid red;*/
+    overflow: hidden;
+    
+}
+
+
+.tab-header{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
+    /*outline: 1px solid green;*/
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
+    border-radius: 10px;
+    position: relative;
+}
+
+.line-box{
+    position: absolute;
+    bottom:0;
+    left: 0;
+    right: 0;
+    height: 5px;
+    background-color: transparent;
+    margin-inline: 2px;
+    overflow: hidden;
+}
+
+.line{
+    height: 100%;
+    width:30%;
+    background-color: #4FD1C5;
+    border-radius: 100svh;
+    animation: loading 2s infinite cubic-bezier(0,0,0,0);
+    position: relative;
+}
+
+@keyframes loading{
+    0%{
+        left:-100%;
+    }
+    100%{
+       left: 200%;
+    }
+}
+
+.tab-header .cell{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 1rem;
+    color: #2D3748;
+}
+
+.tab-main{
+    width: 100%;
+    display: grid;
+    grid-template-rows: 1fr;
+    gap: 0.5rem;
+    overflow-y: auto;
+    max-height: 300px;
+}
+
+.tab-main::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+ }
+
+.tab-main .row{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
+    gap: 0.5rem;
+    /*outline: 1px solid yellow;*/
+}
+
+.tab-main .cell{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.tab-main .cell span{
+    font-size: 0.9rem;
+    color: #2D3748;
+    font-weight: 600;
+}
+
+.tab-main .cell:last-of-type span mat-icon{
+    font-size: 1.2rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-radius:15px;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
+    background-color:#fff;
+    color: #4FD1C5;
+    cursor: pointer;
+}
+
+.tab-main .cell:last-of-type span mat-icon:hover{
+    color:#fff;
+    background-color: #4FD1C5;
 }
