Add the add-user component and it is working

--- a/admin/src/app/home/home.component.css
+++ b/admin/src/app/home/home.component.css
@@ -10,7 +10,7 @@ app-vertical-navbar{
     bottom:0;
 }
 
-app-edit-perizia{
+app-edit-perizia, app-add-user{
     position: absolute;
     top: 0;
     left: 0;
@@ -18,3 +18,4 @@ app-edit-perizia{
     height: 100%;
     z-index: 999;
 }
+
