--- a/admin/src/app/home/home.component.html
+++ b/admin/src/app/home/home.component.html
@@ -7,4 +7,7 @@
     @if(this.periziaService.isShowGallery){
         <app-gallery></app-gallery>
     }
+    @if(this.userService.isAddUser){
+        <app-add-user></app-add-user>
+    }
 </div>
