--- a/users/src/app/tabs/tabs.page.html
+++ b/users/src/app/tabs/tabs.page.html
@@ -9,7 +9,7 @@
 
     <ion-tab-button tab="tab2" href="/tabs/tab2" [ngClass]="{active: navigate =='tab2'}" (click)="getClass('tab2')">
       <span>
-        <mat-icon>person</mat-icon>
+        <mat-icon>list</mat-icon>
       </span>
     </ion-tab-button>
 
