Fixed some problems

--- a/admin/src/app/home/edit-perizia/edit-perizia.component.html
+++ b/admin/src/app/home/edit-perizia/edit-perizia.component.html
@@ -20,7 +20,7 @@
                 <span>Data e ora perizia:</span> {{perizia.data}}
             </li>
             <li>
-                <span>Coordinate: </span>{{perizia.coordinate.lat}} - {{perizia.coordinate.lng}}
+                <span>Coordinate: </span>{{perizia.coordinate.lat.toFixed(3)}} - {{perizia.coordinate.lng.toFixed(3)}}
             </li>
             <li class="descr">
                 <span>Descrizione: </span>
