--- a/admin/src/app/home/users/users.component.html
+++ b/admin/src/app/home/users/users.component.html
@@ -13,6 +13,19 @@
                 </div>
             </div>  
         </div>
+        <div class="change-pwd">
+            <div class="text">
+                <span>
+                    <mat-icon>lock</mat-icon>
+                    <span>Cambia password</span>
+                </span>
+            </div>
+            <div class="add-user-container">
+                <div class="button-parent-pwd" (click)="userService.changePassword()">
+                    <button>Cambia</button>
+                </div>
+            </div>  
+        </div>
         <div class="list-user">
             <div class="text">
                 <span>
