--- a/users/src/app/tabs/tabs.page.html
+++ b/users/src/app/tabs/tabs.page.html
@@ -13,11 +13,17 @@
       </span>
     </ion-tab-button>
 
-    <ion-tab-button (click)="logout()">
+    <ion-tab-button tab="tab3" href="/tabs/tab3" [ngClass]="{active: navigate =='tab3'}" (click)="getClass('tab3')">
+      <span>
+        <mat-icon>person</mat-icon>
+      </span>
+    </ion-tab-button>
+
+    <!--<ion-tab-button (click)="logout()">
       <span>
         <mat-icon>logout</mat-icon>
       </span>
-    </ion-tab-button>
+    </ion-tab-button>-->
   </ion-tab-bar>
 
 </ion-tabs>
