--- a/users/src/app/tab1/tab1.page.scss
+++ b/users/src/app/tab1/tab1.page.scss
@@ -28,6 +28,36 @@ ion-content{
     background-color: #fff;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
     border-radius: 10px;
+    position: relative;
+}
+
+.line-box{
+    position: absolute;
+    top:0;
+    left: 0;
+    right: 0;
+    height: 5px;
+    background-color: transparent;
+    margin-inline: 2px;
+    overflow: hidden;
+}
+
+.line{
+    height: 100%;
+    width:30%;
+    background-color: #4FD1C5;
+    border-radius: 100svh;
+    animation: loading 1s infinite cubic-bezier(0,0,0,0);
+    position: relative;
+}
+
+@keyframes loading{
+    0%{
+        left:-100%;
+    }
+    100%{
+       left: 200%;
+    }
 }
 
 .container-photo .text{
@@ -142,13 +172,12 @@ textarea::placeholder{
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 2fr 1fr;
-    gap:0.5rem
+    gap:0.5rem;
+    margin-bottom:10px;
 }
 
 .picture{
-    height: 100%;
-    width: 15rem;
-    
+    aspect-ratio:1;
 }
 
 .picture img{
